Enhance TableConfig and Schema validation (#16025)