@@ -1055,9 +1055,7 @@ public class TableConfigUtilsTest {
       TableConfigUtils.validate(tableConfig, schema);
       Assert.fail("Should fail since FST index is enabled on RAW encoding type");
     } catch (Exception e) {
-      Assert.assertEquals(e.getMessage(),
-          "Cannot create FST index on column: myCol1, it can only be applied to dictionary encoded single value "
-              + "string columns");
+      Assert.assertEquals(e.getMessage(), "Cannot create FST index on column: myCol1 without dictionary");
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
@@ -1068,9 +1066,7 @@ public class TableConfigUtilsTest {
       TableConfigUtils.validate(tableConfig, schema);
       Assert.fail("Should fail since FST index is enabled on multi value column");
     } catch (Exception e) {
-      Assert.assertEquals(e.getMessage(),
-          "Cannot create FST index on column: myCol2, it can only be applied to dictionary encoded single value "
-              + "string columns");
+      Assert.assertEquals(e.getMessage(), "Cannot create FST index on multi-value column: myCol2");
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
@@ -1081,9 +1077,7 @@ public class TableConfigUtilsTest {
       TableConfigUtils.validate(tableConfig, schema);
       Assert.fail("Should fail since FST index is enabled on non String column");
     } catch (Exception e) {
-      Assert.assertEquals(e.getMessage(),
-          "Cannot create FST index on column: intCol, it can only be applied to dictionary encoded single value "
-              + "string columns");
+      Assert.assertEquals(e.getMessage(), "Cannot create FST index on column: intCol of stored type other than STRING");
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
@@ -1096,7 +1090,7 @@ public class TableConfigUtilsTest {
       Assert.fail("Should fail since TEXT index is enabled on non String column");
     } catch (Exception e) {
       Assert.assertEquals(e.getMessage(),
-          "Cannot create text index on column: intCol, it can only be applied to string columns");
+          "Cannot create TEXT index on column: intCol of stored type other than STRING");
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
@@ -1108,8 +1102,7 @@ public class TableConfigUtilsTest {
       TableConfigUtils.validate(tableConfig, schema);
       Assert.fail("Should fail since field name is not present in schema");
     } catch (Exception e) {
-      Assert.assertEquals(e.getMessage(),
-          "Column: myCol21 defined in field config list must be a valid column defined in the schema");
+      Assert.assertEquals(e.getMessage(), "Failed to find column: myCol21 in schema");
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
@@ -1120,7 +1113,8 @@ public class TableConfigUtilsTest {
       TableConfigUtils.validate(tableConfig, schema);
       Assert.fail("Should fail since dictionary encoding does not support compression codec SNAPPY");
     } catch (Exception e) {
-      Assert.assertEquals(e.getMessage(), "Compression codec: SNAPPY is not applicable to dictionary encoded index");
+      Assert.assertEquals(e.getMessage(),
+          "Compression codec: SNAPPY is not applicable to dictionary encoded column: intCol");
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME).build();
@@ -1131,7 +1125,7 @@ public class TableConfigUtilsTest {
       TableConfigUtils.validate(tableConfig, schema);
       Assert.fail("Should fail since raw encoding does not support compression codec MV_ENTRY_DICT");
     } catch (Exception e) {
-      Assert.assertEquals(e.getMessage(), "Compression codec: MV_ENTRY_DICT is not applicable to raw index");
+      Assert.assertEquals(e.getMessage(), "Compression codec: MV_ENTRY_DICT is not applicable to raw column: intCol");
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
@@ -1172,7 +1166,7 @@ public class TableConfigUtilsTest {
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
       Assert.assertEquals(e.getMessage(), "Dictionary override optimization options (OptimizeDictionary, "
-          + "optimizeDictionaryForMetrics) not supported with forward index for column: myCol2, disabled");
+          + "optimizeDictionaryForMetrics) not supported with forward index disabled for column: myCol2");
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
@@ -1191,19 +1185,21 @@ public class TableConfigUtilsTest {
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
-        .setNoDictionaryColumns(Arrays.asList("myCol1")).setInvertedIndexColumns(Arrays.asList("myCol2"))
-        .setSortedColumn("myCol2").build();
+        .setNoDictionaryColumns(List.of("myCol2"))
+        .setInvertedIndexColumns(List.of("myCol1"))
+        .setSortedColumn("myCol1")
+        .build();
     try {
       // Enable forward index disabled flag for a column with inverted index and is sorted
       Map<String, String> fieldConfigProperties = new HashMap<>();
       fieldConfigProperties.put(FieldConfig.FORWARD_INDEX_DISABLED, Boolean.TRUE.toString());
       FieldConfig fieldConfig =
-          new FieldConfig("myCol2", FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.INVERTED, null, null,
+          new FieldConfig("myCol1", FieldConfig.EncodingType.DICTIONARY, FieldConfig.IndexType.INVERTED, null, null,
               null, fieldConfigProperties);
       tableConfig.setFieldConfigList(Arrays.asList(fieldConfig));
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
-      Assert.fail("Should not fail for myCol2 with forward index disabled but is sorted, this is a no-op");
+      Assert.fail("Should not fail for myCol1 with forward index disabled but is sorted, this is a no-op");
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
@@ -1222,7 +1218,7 @@ public class TableConfigUtilsTest {
       Assert.fail("Should fail for MV myCol2 with forward index disabled but has range and inverted index");
     } catch (Exception e) {
       Assert.assertEquals(e.getMessage(), "Feature not supported for multi-value columns with range index. "
-          + "Cannot disable forward index for column myCol2. Disable range index on this column to use this feature.");
+          + "Cannot disable forward index for column: myCol2. Disable range index on this column to use this feature.");
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
@@ -1241,7 +1237,7 @@ public class TableConfigUtilsTest {
       Assert.fail("Should fail for SV myCol1 with forward index disabled but has range v1 and inverted index");
     } catch (Exception e) {
       Assert.assertEquals(e.getMessage(), "Feature not supported for single-value columns with range index version "
-          + "< 2. Cannot disable forward index for column myCol1. Either disable range index or create range index "
+          + "< 2. Cannot disable forward index for column: myCol1. Either disable range index or create range index "
           + "with version >= 2 to use this feature.");
     }
 
@@ -1258,8 +1254,7 @@ public class TableConfigUtilsTest {
       TableConfigUtils.validate(tableConfig, schema);
       Assert.fail("Should not be able to disable dictionary but keep inverted index");
     } catch (Exception e) {
-      Assert.assertEquals(e.getMessage(),
-          "Cannot create an Inverted index on column myCol2 specified in the noDictionaryColumns config");
+      Assert.assertEquals(e.getMessage(), "Cannot create inverted index on column: myCol2 without dictionary");
     }
 
     // Tests the case when the field-config list marks a column as raw (non-dictionary) and enables
@@ -1273,8 +1268,7 @@ public class TableConfigUtilsTest {
       TableConfigUtils.validate(tableConfig, schema);
       Assert.fail("Should not be able to disable dictionary but keep inverted index");
     } catch (Exception e) {
-      Assert.assertEquals(e.getMessage(),
-          "Cannot create inverted index on column: myCol2, it can only be applied to dictionary encoded columns");
+      Assert.assertEquals(e.getMessage(), "Cannot create inverted index on column: myCol2 without dictionary");
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
@@ -1290,9 +1284,7 @@ public class TableConfigUtilsTest {
       TableConfigUtils.validate(tableConfig, schema);
       Assert.fail("Should not be able to disable dictionary but keep inverted index");
     } catch (Exception e) {
-      Assert.assertEquals(e.getMessage(),
-          "Cannot create FST index on column: myCol2, it can only be applied to dictionary encoded single value "
-              + "string columns");
+      Assert.assertEquals(e.getMessage(), "Cannot create FST index on column: myCol2 without dictionary");
     }
 
     tableConfig = new TableConfigBuilder(TableType.OFFLINE).setTableName(TABLE_NAME)
@@ -1325,7 +1317,7 @@ public class TableConfigUtilsTest {
       TableConfigUtils.validate(tableConfig, schema);
     } catch (Exception e) {
       Assert.assertEquals(e.getMessage(),
-          "Cannot disable forward index for column intCol, as the table type is REALTIME.");
+          "Cannot disable forward index for column: intCol, as the table type is REALTIME");
     }
   }
 
@@ -1643,7 +1635,7 @@ public class TableConfigUtilsTest {
     Assert.assertTrue(e.getMessage().contains("Duplicate function column pair"));
 
     starTreeIndexConfig =
-        new StarTreeIndexConfig(List.of("mycol"), List.of("mycol"), List.of("DISTINCTCOUNTHLL__myCol"),
+        new StarTreeIndexConfig(List.of("myCol"), List.of("myCol"), List.of("DISTINCTCOUNTHLL__myCol"),
             List.of(new StarTreeAggregationConfig("myCol", "DISTINCTCOUNTHLL", Map.of(Constants.HLL_LOG2M_KEY, 16),
                 null, null, null, null, null)), 1);
     TableConfig tableConfig2 = new TableConfigBuilder(TableType.OFFLINE)
@@ -1651,11 +1643,11 @@ public class TableConfigUtilsTest {
         .setStarTreeIndexConfigs(List.of(starTreeIndexConfig))
         .build();
     e = Assert.expectThrows(IllegalStateException.class, () -> TableConfigUtils.validate(tableConfig2, schema));
-    Assert.assertTrue(e.getMessage()
-        .contains("Only one of 'functionColumnPairs' or 'aggregationConfigs' can be specified"));
+    Assert.assertEquals(e.getMessage(),
+        "Either 'functionColumnPairs' or 'aggregationConfigs' must be specified, but not both");
 
     starTreeIndexConfig =
-        new StarTreeIndexConfig(List.of("mycol"), List.of("mycol"), null,
+        new StarTreeIndexConfig(List.of("myCol"), List.of("myCol"), null,
             List.of(new StarTreeAggregationConfig("myCol", "DISTINCTCOUNTHLL", Map.of(Constants.HLL_LOG2M_KEY, 16),
                 null, null, null, null, null),
                 new StarTreeAggregationConfig("myCol", "DISTINCTCOUNTHLL", Map.of(Constants.HLL_LOG2M_KEY, 8),
